2001-09-14  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* Makefile (skk-dic): New target.

	* SKK-CFG: Modify examples for Windows.

	* SKK-MK (SKK-MK-skk-dic): New function.

	* skk-dic.el (skk-small-dic): Typo.

	* skk-e21.el (skk-e21-modeline-property): Use `static-if'.

	* skk-macs.el (skk-loop-for-buffers): New macro.

	* skk.el: Re-indent.
	Make the 1st argment of `error' a format string.

	(skk-mode): The usage of term `entry' is not valid. Say `input'.

	(skk-update-jisyo-original)
	(skk-compute-henkan-lists)
	(skk-update-jisyo-1): The usage of term `entry' is not valid. Say
	`words'.

	(skk-public-jisyo-has-entry-p): Rename to ...
	(skk-public-jisyo-has-word-p): it.

	(skk-compose-ignore-entry): Rename to ...
	(skk-compose-ignore-word): it.

2001-09-13  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* SKK-MK: Re-indent.

	* skk.el (skk-search-jisyo-buf): New function.
	(skk-search-jisyo-file): Call it.
	(skk-select-words-from-list): New function.
	(skk-search-jisyo-file-1): Rename to ...
	(skk-search-jisyo): it.

	* skk-dic.el: New file.

	* skk-vars.el (skk-search-prog-list): Add `skk-search-small-dic'.

2001-09-12  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* etc/{NICOLA-SKK.tut, SKK.tut, SKK.tut.E}: Do not show
	`skk-today'.

	* skk-num.el (skk-num-get-kanji): Rename to ...
	(skk-num-get-suuji): it.
	(skk-num-jisx0208-latin, skk-num-type2-kanji, skk-num-shogi): Use
	it.
	(skk-num-int-p): New function.
	(skk-num-type2-kanji, skk-num-type3-kanji, skk-num-type5-kanji,
	skk-num-shogi): Use it.

	* skk-tut.el (skktut-init-variables-alist): Add `skk-kakutei-key'
	to `skk-rom-kana-base-rule-list'.
	(skktut-j-mode-map): Do not use `substitute-key-definition'.
	(skktut-setup-jisyo-buffer, skktut-end-tutorial): Do not use
	`concat'.

	* skk-vars.el (skk-check-okurigana-on-touroku,
	skk-rom-kana-base-rule-list, skk-rom-kana-rule-list,
	skk-rule-tree, skk-num-alist-type3, skk-num-alist-type5): Doc
	string update.
	(skk-quote-char-alist): New variable.
