@@ -12,6 +12,8 @@
 
 	* skk-macs.el (skk-loop-for-buffers): New macro.
 
+	* skk-vars.el (skk-emacs-type): Use ordinary clauses.
+
 	* skk.el: Re-indent.
 	Make the 1st argment of `error' a format string.
 
@@ -1908,8 +1910,8 @@
 
 
 
-Version: $Id: ChangeLog,v 1.386 2001/09/14 11:55:50 czkmt Exp $
-Last Modified: $Date: 2001/09/14 11:55:50 $
+Version: $Id: ChangeLog,v 1.387 2001/09/14 12:04:24 czkmt Exp $
+Last Modified: $Date: 2001/09/14 12:04:24 $
 
 Local Variables:
 buffer-file-coding-system: iso-2022-jp
